# apollo

./: .apollorc.yml  .conform.yaml  .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .releaserc.yml  .zprofile  .zshrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.tmpl  LICENSE  LICENSE.md  Makefile  Nodesfile.yml  README.md  Spacefile.schema.json  Vagrantfile  ansible-requirements.yml  ansible.cfg  apollo-cli.py  apollo.gitlab-ci.yml  apollo.plugin.zsh  apollo.py  apollo.zsh  configure-node.yml  default.env  defaults.env  defaults.yml  dev.tf  docker-compose.yml  docker-entrypoint.sh  docker-stack.yml  docker-stack.yml.j2  (+23 more)
.ssh/: id_rsa  id_rsa.pub
ansible/: .ansible-lint  README.md  ansible.cfg  git-status.yml  provision.yml  requirements.yml
apollo/: .apollorc.yml  __init__.py  __main__.py  main.py
app/: main.py
ci/: .dockerignore  Dockerfile  docker-stack.yml
docs/: HETZNER Storidge.md  Project Map.md  README.old.md  architecture.md  backplane.md  core.md  data.md  debugging.md  engine.md  examples.md  faq.md  features.md  get-started.md  network.md  orchestrator.md  prepare-node.md  providers.md  security.md  spaces.md  troubleshooting.md  zero.drawio
examples/: DEMO.Dockerfile  DEMO.gitlab-ci.yml  Dockerfile.base
group_vars/: all  mbiosphere  runner  swarm
inventory/: apollo-inventory.py  apollo.py  hcloud.yml  terraform  zero  zero.py  zero.yml
playbooks/: _provision-backplane.yml  apollo-apps.yml  apollo-backplane.yml  apollo-controlplane.yml  apollo-core.yml  apollo-data.yml  (+47 more)
(+784 files in other folders)
